# PYQT4_WRAP_UI(outfiles inputfile ... )
MACRO (PYQT4_WRAP_UI outfiles )
  FOREACH (it ${ARGN})
    GET_FILENAME_COMPONENT(outfile ${it} NAME_WE)
    GET_FILENAME_COMPONENT(infile ${it} ABSOLUTE)
    SET(outfile ${CMAKE_CURRENT_BINARY_DIR}/ui_${outfile}.py)
    ADD_CUSTOM_COMMAND(OUTPUT ${outfile}
      COMMAND ${QT_PYUIC_EXECUTABLE}
      ARGS -o ${outfile} ${infile}
      MAIN_DEPENDENCY ${infile})
    SET(${outfiles} ${${outfiles}} ${outfile})
  ENDFOREACH (it)
ENDMACRO (PYQT4_WRAP_UI)
  

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/sip)
FIND_PACKAGE(PythonLibrary REQUIRED)
FIND_PACKAGE(SIP REQUIRED)
FIND_PACKAGE(PyQt4 REQUIRED)
INCLUDE(SIPMacros.cmake)

SET(SIP_INCLUDES /usr/share/sip/PyQt4)
SET(SIP_TAGS WS_X11 Qt_4_3_0)
MESSAGE(STATUS ${SIP_INCLUDES})

INCLUDE_DIRECTORIES( ${CMAKE_BINARY_DIR} ${CMAKE_SOURCE_DIR}/src ${CMAKE_SOURCE_DIR}/src/planetsephems ${CMAKE_SOURCE_DIR}/src/stelutils ${CMAKE_SOURCE_DIR}/intl ${CMAKE_SOURCE_DIR}/src/stelutils/iniparser ${FreeType2_INCLUDE_DIR} ${OPENGL_INCLUDE_DIR} ${CURL_INCLUDE_DIRS} ${JPEG_INCLUDE_DIR} ${Boost_INCLUDE_DIRS} ${SDL_INCLUDE_DIR} ${ICONV_INCLUDE_DIR} ${INTL_INCLUDE_DIR} ${SDLMIXER_INCLUDE_DIR} ${QT_INCLUDE_DIR}/QtScript ${QT_QTSCRIPT_INCLUDE_DIR} ${SIP_INCLUDE_DIR} )

ADD_SIP_PYTHON_MODULE(PyStellarium PyStellarium.sip stelMain)

SET(QT_PYUIC_EXECUTABLE /usr/bin/pyuic4)
PYQT4_WRAP_UI(stellarium_UIS_PY ${CMAKE_SOURCE_DIR}/src/mainGui.ui)
ADD_CUSTOM_TARGET(BuildPythonUI ALL DEPENDS ${stellarium_UIS_PY} COMMENT "Building python UI")