ADD_SUBDIRECTORY( anutan )
ADD_SUBDIRECTORY( arabic_al-sufi )
ADD_SUBDIRECTORY( arabic_ancient )
ADD_SUBDIRECTORY( arabic_lunar_stations )
ADD_SUBDIRECTORY( belarusian )
ADD_SUBDIRECTORY( blackfoot )
ADD_SUBDIRECTORY( bugis )
ADD_SUBDIRECTORY( chinese )
ADD_SUBDIRECTORY( chinese_contemporary )
ADD_SUBDIRECTORY( egyptian )
ADD_SUBDIRECTORY( hawaiian_starlines )
ADD_SUBDIRECTORY( indian )
ADD_SUBDIRECTORY( inuit )
ADD_SUBDIRECTORY( japanese_moon_stations )
ADD_SUBDIRECTORY( kamilaroi )
ADD_SUBDIRECTORY( korean )
ADD_SUBDIRECTORY( mandar )
ADD_SUBDIRECTORY( maori )
ADD_SUBDIRECTORY( mongolian )
ADD_SUBDIRECTORY( navajo )
ADD_SUBDIRECTORY( norse )
ADD_SUBDIRECTORY( romanian )
ADD_SUBDIRECTORY( ruelle )
ADD_SUBDIRECTORY( sami )
ADD_SUBDIRECTORY( sardinian )
ADD_SUBDIRECTORY( siberian )
ADD_SUBDIRECTORY( tongan )
ADD_SUBDIRECTORY( tukano )
ADD_SUBDIRECTORY( tupi )
ADD_SUBDIRECTORY( western )
ADD_SUBDIRECTORY( western_hlad )
ADD_SUBDIRECTORY( western_rey )
ADD_SUBDIRECTORY( western_SnT )

INSTALL(FILES "common_star_names.fab" "common_dso_names.fab" DESTINATION ${SDATALOC}/skycultures)
