ADD_SUBDIRECTORY( anutan )
ADD_SUBDIRECTORY( arabic_al-sufi )
ADD_SUBDIRECTORY( arabic_arabian_peninsula )
ADD_SUBDIRECTORY( arabic_indigenous )
# Exclude from standard package
# ADD_SUBDIRECTORY( armintxe )
ADD_SUBDIRECTORY( aztec )
ADD_SUBDIRECTORY( babylonian_mulapin )
ADD_SUBDIRECTORY( babylonian_seleucid )
ADD_SUBDIRECTORY( balinese )
ADD_SUBDIRECTORY( belarusian )
ADD_SUBDIRECTORY( boorong )
ADD_SUBDIRECTORY( chinese )
ADD_SUBDIRECTORY( chinese_chenzhuo )
ADD_SUBDIRECTORY( chinese_song_dynasty )
# Exclude from standard package
# ADD_SUBDIRECTORY( egyptian )
ADD_SUBDIRECTORY( egyptian_dendera )
ADD_SUBDIRECTORY( greek_almagest )
ADD_SUBDIRECTORY( greek_dante )
ADD_SUBDIRECTORY( greek_farnese )
ADD_SUBDIRECTORY( greek_leidenAratea )
ADD_SUBDIRECTORY( hawaiian_starlines )
ADD_SUBDIRECTORY( inuit )
ADD_SUBDIRECTORY( indian )
ADD_SUBDIRECTORY( japanese_moon_stations )
ADD_SUBDIRECTORY( kamilaroi )
ADD_SUBDIRECTORY( khoi-san )
ADD_SUBDIRECTORY( korean )
ADD_SUBDIRECTORY( lokono )
ADD_SUBDIRECTORY( macedonian )
ADD_SUBDIRECTORY( maori )
# Exclude from standard package
# ADD_SUBDIRECTORY( maya )
ADD_SUBDIRECTORY( modern )
ADD_SUBDIRECTORY( modern_chinese )
ADD_SUBDIRECTORY( modern_rey )
ADD_SUBDIRECTORY( modern_iau )
ADD_SUBDIRECTORY( modern_hlad )
ADD_SUBDIRECTORY( modern_st )
# Exclude from standard package
# ADD_SUBDIRECTORY( modern_sternenkarten )
ADD_SUBDIRECTORY( mongolian )
ADD_SUBDIRECTORY( navajo )
ADD_SUBDIRECTORY( norse )
ADD_SUBDIRECTORY( northern_andes )
ADD_SUBDIRECTORY( romanian )
ADD_SUBDIRECTORY( ruanui_sky_tahiti_and_society_islands )
ADD_SUBDIRECTORY( russian_siberian )
ADD_SUBDIRECTORY( sami )
ADD_SUBDIRECTORY( samoan )
ADD_SUBDIRECTORY( sardinian )
ADD_SUBDIRECTORY( seri )
ADD_SUBDIRECTORY( tibetan )
ADD_SUBDIRECTORY( tongan )
ADD_SUBDIRECTORY( tukano )
ADD_SUBDIRECTORY( tikuna )
ADD_SUBDIRECTORY( tupi )
ADD_SUBDIRECTORY( vanuatu_netwar )
ADD_SUBDIRECTORY( xhosa )
ADD_SUBDIRECTORY( zulu )

INSTALL(FILES "common_star_names.fab" DESTINATION ${SDATALOC}/skycultures)
